--- a/conFramework/css/atoms/_colors.css
+++ b/conFramework/css/atoms/_colors.css
@@ -5,4 +5,5 @@
     --secondary-neon-color: #e6d1a3;
     --text-color: #c7c3df;
     --container-bg: rgba(17, 8, 27, 0.719);
+    --hover-bg: rgba(135, 172, 172, 0.601);
 }
