--- a/conFramework/css/molecules/_nav.css
+++ b/conFramework/css/molecules/_nav.css
@@ -3,7 +3,7 @@
     background: rgba(0,0,0,0.7);
     border-bottom: 2px solid var(--primary-neon-color);
     box-shadow: 0 0 15px var(--primary-neon-color);
-    backdrop-filter: blur(5px); /* Efecto glassmorphism opcional */
+    backdrop-filter: blur(5px); /* Efecto glassmorphism  */
 }
 
 .navbar .logo-text {
