--- a/css/main.css
+++ b/css/main.css
@@ -1,23 +1,23 @@
 /* --- Importación de todos los archivos CSS --- */
 
 /* 1. Atoms */
-@import url('./atoms/_colors.css');
-@import url('./atoms/_typography.css');
-@import url('./atoms/_buttons.css');
+@import 'atoms/_buttons.css';
+@import 'atoms/_colors.css';
+@import 'atoms/_typography.css';
 
 /* 2. Molecules */
-@import url('./molecules/_form.css');
-@import url('./molecules/_nav.css');
-@import url('./molecules/_carousel.css');
-@import url('./molecules/_tables.css');
+@import 'molecules/_carousel.css';
+@import 'molecules/_form.css';
+@import 'molecules/_nav.css';
+@import 'molecules/_tables.css';
 
 /* 3. Organisms */
-@import url('./organisms/_preloader.css');
-@import url('./organisms/_sections.css');
-@import url('./organisms/_footer.css');
+@import 'organisms/_footer.css';
+@import 'organisms/_preloader.css';
+@import 'organisms/_sections.css';
 
-/* 4. Templates */
-@import url('./templates/_layout.css');
+/* 4. Pages */
+@import 'pages/_home.css';
 
-/* 5. Pages */
-@import url('./pages/_home.css');
+/* 5. Templates */
+@import 'templates/_layout.css';
